--- a/3.html
+++ b/3.html
@@ -4,17 +4,17 @@
     <title>CREW-Members</title>
     <meta charset="utf-8">
 
-</head>
-<body>
-    <h1><a href="index.html">CREW</a></h1>
-    <ul>
-        <li><a href="1.html">1</a></li>
-        <li><a href="2.html">2</a></li>
-        <li><a href="3.html">3</a></li>
-        <li><a href="4.html">4</a></li>
-        <li><a href="5.html">5</a></li>
+  </head>
+  <body>
+      <h1><a href="index.html">CREW</a></h1>
+      <ul>
+          <li><a href="1.html">김재현</a></li>
+          <li><a href="2.html">남주환</a></li>
+          <li><a href="3.html">이경호</a></li>
+          <li><a href="4.html">최재원</a></li>
+          <li><a href="5.html">이지원</a></li>
     </ul>
     <h2>이경호</h2>
-    <img src="이경호.jpg"width="70%">
+    <img src="이경호.jpg"width="30%">
 </body>
 </html>
