--- a/4.html
+++ b/4.html
@@ -11,7 +11,8 @@
           <li><a href="2.html">남주환</a></li>
           <li><a href="3.html">이경호</a></li>
           <li><a href="4.html">최재원</a></li>
-          <li><a href="5.html">이지원</a></li>    </ul>
+          <li><a href="5.html">이지원</a></li>
+     </ul>
     <h2>최재원</h2>
     <img src="최재원.jpg"width="30%">
 </body>
